# garbage_destroyer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg  setup.sh
.github/workflows/: python-app.yml
garbage_destroyer/: app.py  clean.py  cli.py  settings.py
tests/: conftest.py  test_clean.py
