[tool.poetry]
name = "garbage_destroyer"
version = "0.2.0"
description = "Project destinated to clean old files for a specif directory"
authors = ["Lnvictor <lnvictor@github.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
